scss/_about.scss
.about-us {
    font: normal 1.3em "VT323", Helvetica, sans-serif;
    width: 100%;
    min-height: 340px;
    background: #2eb398;
    padding-right: var(--content-padding);
    padding-left: var(--content-padding);
    h2 {
        font-size: 40px;
        border-bottom: 3px solid var(--main-color);
        margin-bottom: 3px;
    }
    a:hover {
        color: blue;
    }

    .inner-about-us {
        height: 100%;
        display: flex;
        justify-content: space-around;
        align-items: flex-end;
        h3 {
            font-size: 2rem;
            color: rgba(255,255,0,1);
            -o-text-overflow: ellipsis;
            text-overflow: ellipsis;
            text-shadow: 5px 5px 0 rgba(255,0,0,1) 
        }
        .gk {
            height: 100%;
            margin-right: 10px;
        }
        .gal {
            height: 100%;
        }
    }
}

.img_us {
        width: 25%;
}

